--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>Welcome to my awesome Webpage!</title>
+  </head>
   <body>
     Hello there, awesome person! 
   </body>
