--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <h1>I'm a header!</h1>
   <body>
+    <img src="https://avatars.githubusercontent.com/u/76137541?v=4">
     Hello there, awesome person! 
   </body>
 </html>
