--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Welcome to my awesome Webpage!</title>
   </head>
   <h1>I'm a header!</h1>
- 
+ <body>
     <img src= "https://avatars.githubusercontent.com/u/76137541?v=4"> 
     Hello there, awesome person! 
   </body>
