--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   </head>
   <h1>I'm a header!</h1>
  <body>
+   <ul>
+     <li>youtube</li>
+     <li>amazon</li>
+     <li>pinterest</li>
+     <li>google</li>
+   </ul>
     <img src= "https://avatars.githubusercontent.com/u/76137541?v=4"> 
     Hello there, awesome person! 
   </body>
