--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <h1>I'm a header!</h1>
  <body>
    <ul>
-     <li>links to my favorite websites <a https://www.youtube.com>link to youtube</a></li>
-     <li><a https://www.amazon.com>linktoamazon</a></li>
-     <li><a https://www.pinterest.com> link to Pinterest</a></li>
-     <li><a https://www.google.com>Link to Google!</a></li>
+     <li>links to my favorite websites <a href=https://www.youtube.com>link to youtube</a></li>
+     <li><a href=https://www.amazon.com>linktoamazon</a></li>
+     <li><a href=https://www.pinterest.com> link to Pinterest</a></li>
+     <li><a href=https://www.google.com>Link to Google!</a></li>
    </ul>
     <img src= "https://avatars.githubusercontent.com/u/76137541?v=4"> 
     Hello there, awesome person! 
