--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>Welcome to my awesome Webpage!</title>
   </head>
   <h1>I'm a header!</h1>
